css/turniertabellen.css
/* Turniertabellen Unterseiten */

.turniertabelle-wrapper{
    padding-bottom: 3em;
}
.turniertabelle-wrapper > aside {
    padding-left: 1em;
    display: block;
}
.turniertabelle {
    table-layout: fixed;
    width: fit-content;
}
.turniertabelle td {
    word-wrap: break-word;
}
input {
    width: 2em;
    height: 1.2em;
    margin-bottom: 1em;
    text-align: center;
    margin-top: 0.3em;
    background-color: var(--text-2-dark);
    color: var(--surface-1);
    border: 0;
    border-right: 0.1em solid var(--surface-1);
    border-radius: .5em;
}

button {
    width: 2.5em;
    height: 1.5em;
    display: inline-block;
    font-weight: bold;
    background-color: #3498db;
    border-radius: .5em;
    border-color: #1f618d;
    transition: background-color 0.3s ease;
}
  
button:hover {
    background-color: #2980b9;
    cursor: pointer;
}
  
.turniertabelle p{
    margin: 0;
    padding: 0;
}

@media (min-width: 600px) {
    .turniertabelle-wrapper{
        padding-left: 3em;
        padding-right: 3em;
    }
    .turniertabelle-wrapper > aside {
        display: grid;
        grid-template-areas:
            "u1 u2"
            "liste treppe";
    }
    .turniertabelle-wrapper > aside:first-child {
        grid-area: u1;
    }
    .turniertabelle-wrapper > aside:nth-child(3) {
        grid-area: u2;
    }
    .turniertabelle-wrapper > aside > ol {
        grid-area: liste;
        margin-bottom: 2em;
    }
    .turniertabelle-wrapper > aside > table {
        grid-area: treppe;
    }
    input {
        width: 2.5em;
    }
}
@media (min-width: 1200px) {
    .turniertabelle-wrapper{
        display: grid;
        grid-template-areas:
            "beschreibung beschreibung"
            "tabelle u2";
        grid-template-columns: 3fr 1fr;
        grid-template-rows: auto;
        gap: 1em;
    }
    .turniertabelle-wrapper > section {
        grid-area: beschreibung;
    }
    .turniertabelle-wrapper > article {
        grid-area: tabelle;
    }
    .turniertabelle {
        width: 100%;
    }
    .turniertabelle-wrapper > aside {
        display: block;
    }

    .turniertabelle {
        width: 100%;
    }



    .treppe td {
        padding: 0.5em;
        word-wrap: break-word;
        text-align: center;
    }

    .treppe, .treppe td{
        display: table-cell;
        padding-left: 1em;
        padding-right: 1em;
    }
}

